# JustChat

./: .gitignore  Dockerfile.dev  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  tests.yml
.github/workflows/: CI.yml
alembic/: env.py
alembic/versions/: d711610faec2_add_chat_user_message_tables.py
backend/src/dating/application/: create_chat.py
backend/src/dating/main/: ioc.py  web.py
backend/tests/test_users/: test_endpoints.py
src/dating/adapters/database/: ram_chat_db.py  ram_session_db.py  ram_user_db.py
src/dating/application/chat/: create_chat.py  delete_chat.py  get_chat.py
src/dating/application/common/: chat_gateway.py  session_gateway.py  user_gateway.py
src/dating/application/user/: create_user.py
src/dating/main/: web.py
src/just_chat/adapters/: sql_executor.py
src/just_chat/adapters/auth/: password.py
src/just_chat/adapters/database/: exceptions.py  ram_chat_db.py  ram_message_db.py  ram_session_db.py  ram_user_db.py
src/just_chat/adapters/events/: websocket_event_gateway.py
src/just_chat/adapters/security/: argon2_password_provider.py  password_provider.py
src/just_chat/application/chat/: create_chat.py  create_chat_with_random_user.py  delete_chat.py  get_chat.py
src/just_chat/application/common/: chat_gateway.py  event_bus.py  event_gateway.py  id_provider.py  message_gateway.py  password_provider.py  session_gateway.py  user_gateway.py
src/just_chat/application/event/: add_user_event_bus.py  delete_user_event_bus.py
src/just_chat/application/message/: create_message.py  get_chat_messages.py
src/just_chat/application/user/: create_user.py  get_user.py  get_user_by_id.py  get_user_by_token.py  login.py
src/just_chat/chat/adapters/: interactor_factory.py  raw_sql_chat_gateway.py
src/just_chat/chat/application/: create_chat.py  create_chat_with_random_user.py  delete_chat.py  get_chat.py
src/just_chat/chat/domain/: chat.py  chat_access.py
src/just_chat/common/application/: image_gateway.py  interactor.py  transaction_manager.py
src/just_chat/domain/exceptions/: __init__.py  access.py
src/just_chat/domain/models/: chat.py  event.py  message.py  notification.py
src/just_chat/domain/services/: chat.py  chat_access.py  event.py  message.py  notification.py  user.py
src/just_chat/event/application/: add_user_event_bus.py  delete_user_event_bus.py
src/just_chat/event/domain/: event.py
src/just_chat/event/presentation/: interactor_factory.py
src/just_chat/main/: config.py  ioc.py  telegram_bot.py  web.py
src/just_chat/message/adapters/: raw_sql_message_gateway.py
src/notification_service/: __main__.py  main.py
tests/application/: test_chat.py  test_user.py
tests/domain/: test_chat.py  test_message.py  test_notification.py  test_user.py
tests/endpoints/: conftest.py  test_user.py
tests/web/: conftest.py  test_chat.py  test_event.py  test_message.py  test_user.py
(+159 files in other folders)
